--- a/css/qa.css
+++ b/css/qa.css
@@ -217,6 +217,7 @@ h4 {
 
 #qa-1-container {
   height: 50%;
+  padding: 28px;
 }
 
 #qa-1-container > * {
@@ -720,6 +721,7 @@ h4 {
   #qa-1-container {
     height: unset;
     top: unset;
+    padding: unset;
   }
 
   #qa-pre-container {
