--- a/css/qa.css
+++ b/css/qa.css
@@ -202,7 +202,7 @@ h4 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 32px 28px 32px 28px;
+  padding: 32px 28px 132px 28px;
   height: 100vh;
   box-sizing: border-box;
   overflow: hidden;
@@ -236,7 +236,7 @@ h4 {
   right: 0;
   width: 100%;
   flex-grow: 1;
-  padding: 41px 28px 48px 28px;
+  padding: 41px 28px 148px 28px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -266,7 +266,7 @@ h4 {
   flex-direction: column;
   flex-grow: 1;
   overflow: hidden;
-  height: calc(100% - 100px);
+  height: 100%;
 }
 
 .response form {
@@ -329,7 +329,7 @@ h4 {
 .qa-panel {
   background-size: cover;
   background-position: center, center;
-  height: calc(100% - 100px);
+  height: 100%;
 }
 .content {
   flex: 1; /* Allows content to grow and fill available space */
@@ -529,7 +529,7 @@ h4 {
   position: relative;
   height: 100%;
   justify-content: space-between;
-  /* gap: 31px; */
+  /* padding-bottom: 100px; */
 }
 
 #contactForm {
